--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
         <div class="hero">
            
-            <p>
+           
+            <div class="email"> <p>
                 Coloque seu melhor email para enviarmos nossas próximas ofertas:
             </p>
-            <div class="email">
                 <form method="get">
                     <input type="text" class="text">
                     <input type="submit" value="salvar" id="btn-salvar">
